# ESP_IR_AC

./: CMakeLists.txt  sdkconfig.defaults
.github/workflows/: build.yml
main/: CMakeLists.txt  automation.cpp  automation.h  config.h  dht_sensor.cpp  dht_sensor.h  ir_codes.cpp  ir_codes.h  ir_uart.cpp  ir_uart.h  main.cpp  system_utils.cpp  system_utils.h  web_server.cpp  web_server.h  wifi_manager.cpp  wifi_manager.h
pc_client/: AcController.py  controller.py
